protocolmodel/mcrl2/testing/errors/error_3001.mcf
% E3001 - No mutually supported protocol version
[true* . LOG_ERROR(E3001)] false